Added a new progress component

--- a/src/css/components/all.css
+++ b/src/css/components/all.css
@@ -41,6 +41,7 @@
 @import 'message';
 @import 'notification';
 @import 'pagination';
+@import 'progress';
 @import 'switch';
 @import 'table';
 @import 'tabs';
