--- a/src/css/components/notification.css
+++ b/src/css/components/notification.css
@@ -18,6 +18,7 @@ section: Components
 .c-notification {
   @apply --card;
   box-shadow: var(--shadow-2);
+  min-height: auto;
   padding: .5em 2.5rem .5em .5rem !important;
   position: relative;
   text-align: left;
