--- a/src/css/components/field.css
+++ b/src/css/components/field.css
@@ -148,7 +148,7 @@ section: Components
 
 .c-field--large {
   font-size: var(--fontSize--semiLarge);
-  padding: 30px 0;
+  height: 48px;
 
   .c-field__input { font-size: inherit; }
 }
