--- a/src/css/settings/shapes.css
+++ b/src/css/settings/shapes.css
@@ -20,8 +20,22 @@ section: Settings
     width: var(--arrow-width);
   };
 
+  --arrow-up--dark: {
+    background: no-repeat url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="12"><path fill="#000" transform="rotate(0)" d="M2.658,0.000 C-13.615,0.000 50.938,0.000 34.662,0.000 C28.662,0.000 23.035,12.002 18.660,12.002 C14.285,12.002 8.594,0.000 2.658,0.000 Z"/></svg>');
+    background-size: 100% auto;
+    height: var(--arrow-length);
+    width: var(--arrow-width);
+  };
+
   --arrow-down: {
     background: no-repeat url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="12"><path fill="#fff" transform="rotate(180 18 6)" d="M2.658,0.000 C-13.615,0.000 50.938,0.000 34.662,0.000 C28.662,0.000 23.035,12.002 18.660,12.002 C14.285,12.002 8.594,0.000 2.658,0.000 Z"/></svg>');
+    background-size: 100% auto;
+    height: var(--arrow-length);
+    width: var(--arrow-width);
+  };
+
+  --arrow-down--dark: {
+    background: no-repeat url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="12"><path fill="#000" transform="rotate(180 18 6)" d="M2.658,0.000 C-13.615,0.000 50.938,0.000 34.662,0.000 C28.662,0.000 23.035,12.002 18.660,12.002 C14.285,12.002 8.594,0.000 2.658,0.000 Z"/></svg>');
     background-size: 100% auto;
     height: var(--arrow-length);
     width: var(--arrow-width);
@@ -34,8 +48,22 @@ section: Settings
     width: var(--arrow-length);
   };
 
+  --arrow-left--dark: {
+    background: no-repeat url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="32"><path fill="#000" transform="rotate(-90 18 18)" d="M2.658,0.000 C-13.615,0.000 50.938,0.000 34.662,0.000 C28.662,0.000 23.035,12.002 18.660,12.002 C14.285,12.002 8.594,0.000 2.658,0.000 Z"/></svg>');
+    background-size: 100% auto;
+    height: var(--arrow-width);
+    width: var(--arrow-length);
+  };
+
   --arrow-right: {
     background: no-repeat url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="32"><path fill="#fff" transform="rotate(90 6 6)" d="M2.658,0.000 C-13.615,0.000 50.938,0.000 34.662,0.000 C28.662,0.000 23.035,12.002 18.660,12.002 C14.285,12.002 8.594,0.000 2.658,0.000 Z"/></svg>');
+    background-size: 100% auto;
+    height: var(--arrow-width);
+    width: var(--arrow-length);
+  };
+
+  --arrow-right--dark: {
+    background: no-repeat url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="32"><path fill="#000" transform="rotate(90 6 6)" d="M2.658,0.000 C-13.615,0.000 50.938,0.000 34.662,0.000 C28.662,0.000 23.035,12.002 18.660,12.002 C14.285,12.002 8.594,0.000 2.658,0.000 Z"/></svg>');
     background-size: 100% auto;
     height: var(--arrow-width);
     width: var(--arrow-length);
